--- a/q1.html
+++ b/q1.html
@@ -30,7 +30,7 @@
         <br>
         <h1>Question #1:</h1>
         <p>If 30 + x = -20, what is the value of x?</p>
-        <a href="https://kamyaismyname.github.io/w/w.htmll" class="btn btn-primary">
+        <a href="https://kamyaismyname.github.io/w/w.html" class="btn btn-primary">
             20
         </a>
         <a href="https://kamyaismyname.github.io/w/w.html" class="btn btn-primary">
