--- a/q1.html
+++ b/q1.html
@@ -36,7 +36,7 @@
         <a href="https://kamyaismyname.github.io/w/w.html" class="btn btn-primary">
             30
         </a>
-        <a href="https://kamyaismyname.github.io/q2/q2.html" class="btn btn-primary">
+        <a href="file:///Users/macbookair/Downloads/ICT%204TH/SW%20/q2.html" class="btn btn-primary">
             -50
         </a>
         <a href="https://kamyaismyname.github.io/w/w.html" class="btn btn-primary">
